--- a/scss/editor/embeds/_embed-faded.scss
+++ b/scss/editor/embeds/_embed-faded.scss
@@ -1,9 +1,5 @@
 @forward '../../shared/file-margins';
 
-.markdown-preview-view p:has(.markdown-embed[alt~="faded"]) {
-    position: relative;
-}
-
 @scope (:is(.markdown-source-view, .markdown-preview-view) .markdown-embed[alt~="faded"]) to (.markdown-embed) {
     :scope {
         border-inline-start: none;
@@ -17,37 +13,7 @@
     .embed-title {
         display: none;
     }
-
-
-    // Making embeds inline when possible
-    :scope:where(:not(:has(.mod-header + div + div)):not(:has(.mod-header + div br))):has(.mod-header + div > p),
-    :scope:where(:has(.mod-header + div > pre.frontmatter):not(:has(.mod-header + div + div + div)):not(:has(.mod-header + div + div br))):has(.mod-header + div + div > p) {
-        
-        position: unset;
-
-        .markdown-embed-content .markdown-rendered p {
-            margin-bottom: 0;
-        }
-
-        // Inline cascading
-        &,
-        & :where(.markdown-embed-content), 
-        & :where(.markdown-embed-content .markdown-rendered), 
-        & :where(.markdown-embed-content .markdown-rendered .markdown-preview-sizer), 
-        & :where(.markdown-embed-content .markdown-rendered .markdown-preview-sizer .mod-header ~ div), 
-        & :where(.markdown-embed-content .markdown-rendered .markdown-preview-sizer .mod-header ~ div p) {
-            display: inline;
-        }
-
-        & :where(.markdown-embed-content .markdown-rendered .markdown-preview-sizer .mod-header) {
-            display: none;
-        }
-
-        & :where(.markdown-embed-content .markdown-rendered .markdown-preview-sizer .markdown-preview-pusher) {
-            display: inline-block;
-        }
-    }
-
+    
     // block embeds
     .markdown-embed-link {
         position: absolute;
@@ -59,7 +25,7 @@
         max-height: unset;
     }
 
-    :is(:scope, .markdown-embed):has(> .markdown-embed-link:hover) {
+    :is(:scope, .markdown-embed):hover {
         background-color: var(--background-modifier-hover);
     }
 }
