:has() purge: overflow always visible on block-language-dataviewjs blocks in reading view

--- a/css/plugins/community/dataview/dataview-wide.css
+++ b/css/plugins/community/dataview/dataview-wide.css
@@ -18,7 +18,7 @@ body {
   --file-margins-inline: var(--size-4-6);
 }
 
-.block-language-dataviewjs:has(.dataview-wide) {
+.markdown-reading-view .block-language-dataviewjs {
   overflow: visible !important;
 }
 
