:has() purge: bullets indicator in file explorer are now completely removed without the plugin Highlight Active Folder Section

--- a/scss/plugins/community/_highlight-active-folder-section.scss
+++ b/scss/plugins/community/_highlight-active-folder-section.scss
@@ -84,8 +84,7 @@ body {
         background-color: currentColor;
     }
 
-    .nav-file-title.is-active::after,
-    .nav-folder-title.is-active::after {
+    .highlighted-folder .nav-file-title.is-active::after {
         content: "";
         position: absolute;
         left: calc(-4px - var(--active-file-bullet-size, 6px));
