:has() purge: status bar in ribbon

--- a/scss/window/_status-bar.scss
+++ b/scss/window/_status-bar.scss
@@ -101,8 +101,12 @@
             opacity: var(--icon-opacity-inactive);
         }
 
-        .status-bar-item:not(:has(svg)) {
+        .status-bar-item {
             transform: rotate(180deg);
+        }
+
+        .status-bar-item svg {
+            transform: rotate(-180deg);
         }
 
         .status-bar:hover {
