:has() purge: Family-tree is now a cssclass

--- a/scss/css/cssclasses/family-tree.scss
+++ b/scss/css/cssclasses/family-tree.scss
@@ -3,4 +3,4 @@ FAS - Family Tree
 Author: ElsaTam (Kapirklaa in Discord)
 */
 
-@use '../../../editor/lists/family-tree';
+@use '../../cssclasses/family-tree';
