:has() purge: List reversed is now a cssclass

--- a/scss/css/cssclasses/list-reversed.scss
+++ b/scss/css/cssclasses/list-reversed.scss
@@ -3,4 +3,4 @@ FAS - List Reversed
 Author: ElsaTam (Kapirklaa in Discord)
 */
 
-@use '../../../editor/lists/list-reversed';
+@use '../../cssclasses/list-reversed';
