:has() purge: Tree view is now a cssclass

--- a/scss/css/cssclasses/tree-view.scss
+++ b/scss/css/cssclasses/tree-view.scss
@@ -3,4 +3,4 @@ FAS - Tree View
 Author: ElsaTam (Kapirklaa in Discord)
 */
 
-@use '../../../editor/lists/tree-view';
+@use '../../cssclasses/tree-view';
