--- a/snippets/cssclasses/sci-fi.css
+++ b/snippets/cssclasses/sci-fi.css
@@ -7,6 +7,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   container: markdown-view/inline-size;
 }
 
+/*@forward '../shared/markdown-anchor';*/
 body {
   --sci-fi-color-rgb: var(--color-cyan-rgb);
 }
@@ -32,6 +33,30 @@ body {
   padding-inline: 3cqh;
 }
 
+/*@supports (position-anchor: --anchor-view-content) {
+    .sci-fi.markdown-preview-view::before,
+    .sci-fi.markdown-source-view::before {
+        content: "";
+        position: fixed;
+        position-anchor: --anchor-view-content;
+        top: anchor(top); bottom: anchor(bottom);
+        left: anchor(left); right: anchor(right);
+        z-index: 0;
+        background: rgba(var(--sci-fi-color-rgb), 1);
+        -webkit-mask-image: var(--sci-fi-frame-left), var(--sci-fi-frame-right);
+        -webkit-mask-size: auto 100%;
+        -webkit-mask-position: left center, right center;
+        -webkit-mask-repeat: no-repeat;
+    }
+
+    .sci-fi.markdown-preview-view::before {
+        right: calc(anchor(right) + var(--scrollbar-width, 12px));
+    }
+
+    .sci-fi.markdown-source-view::before {
+        right: 0;
+    }
+}*/
 .markdown-reading-view:has(> .sci-fi)::before,
 .sci-fi.markdown-source-view::before {
   content: "";
