Fix font-weight to always match 600 in bold

--- a/scss/foundations/text/_font-weight.scss
+++ b/scss/foundations/text/_font-weight.scss
@@ -1,18 +1,8 @@
-body {
-    --font-thin: 100;
-    --font-extralight: 200;
-    --font-light: 300;
-    --font-normal: 400;
-    --font-medium: 500;
-    --font-semibold: 600;
-    --font-bold: 700;
-    --font-extrabold: 800;
-    --font-black: 900;
-}
 
 @container style(--font-text-override: '??') {
     .app-container {
         --font-weight: var(--font-light);
+        --bold-modifier: 300;
     }
     .markdown-source-view,
     .markdown-source-view.mod-cm6 .cm-scroller,
