--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -3,7 +3,7 @@
 @use 'print';
 
 
-/*@use 'canvas/canvas';*/
+//@use 'canvas/canvas';*/
 @use 'components/components';
 @use 'editor/editor';
 @use 'plugins/plugins';
@@ -15,5 +15,5 @@
 @use 'style-settings';
 
 @use 'shared/fonts/main_fonts';
-/*@use 'shared/fonts/additional_fonts';*/
-/*@use 'test';*/
+//@use 'shared/fonts/additional_fonts';*/
+//@use 'test';*/
