--- a/scss/plugins/community/dataview/_dataview-cards-deck.scss
+++ b/scss/plugins/community/dataview/_dataview-cards-deck.scss
@@ -111,6 +111,14 @@
 }
 
 
+@scope (body:not(.is-ios) .dataview-cards-deck) to (.markdown-embed .markdown-embed) {
+    .ul.dataview-result-list-root-ul::-webkit-scrollbar {
+        width: var(--deck-scrollbar-width);
+        height: var(--deck-scrollbar-width);
+    }
+}
+
+
 /* Remove code bellow in case of performance issues */
 
 @scope (.dataview-cards-deck) to (.markdown-embed .markdown-embed) {
