--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -655,6 +655,21 @@ settings:
         title: Use plain table style
         type: class-toggle
         default: false
+    - 
+        id: table-margin-inline
+        title: Table position
+        type: variable-select
+        default: auto
+        options:
+            - 
+                value: 0 auto
+                label: Left
+            - 
+                value: auto
+                label: Centered
+            - 
+                value: auto 0
+                label: Right
 
 
 
