--- a/publish.css
+++ b/publish.css
@@ -3648,6 +3648,12 @@ body {
     margin-inline: auto;
   }
 }
+@container style(--image-centered: enable) and (style(--image-shadow-offset: 0) or style(--image-shadow-offset: 0px)) {
+  .markdown-source-view .cm-content > .image-embed img {
+    display: block;
+    margin-inline: auto;
+  }
+}
 body {
   --link-decoration-hover: var(--link-decoration);
   --link-external-decoration: underline;
